# Yet-Another-Cookiecutter-Python-Template

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml
docs/: conf.py  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
{{cookiecutter.module_name}}/: pyproject.toml  tox.ini  {{cookiecutter.module}}.py
{{cookiecutter.module_name}}/tests/: demo.py  profiler.py  tests.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: __init__.py  {{cookiecutter.module_name}}.py
