[tool.poetry]
name = "Yet-Another-Cookiecutter-Python-Template"
version = "0.1.0"
description = "A full featured Cookiecutter Python project template bundled with a nice shell script that will definitely make your life easier."
authors = ["Bernardo Rodrigues <bernardocrodrigues@live.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^2.2"
recommonmark = "^0.6.0"
m2r = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
