[tool.poetry]
name = "{{cookiecutter.module_name}}"
version = "0.1.2"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
# readme = 'README.rst'
# homepage = "https://pendulum.eustace.io"
# repository = "https://github.com/sdispater/pendulum"
# documentation = "https://pendulum.eustace.io/docs"
# keywords = ['datetime', 'date', 'time']

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.0"
pytest-cov = "^2.7"
tox = "^3.13"
pylint = "^2.3"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
